--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,20 +3,14 @@
         <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
     </div>
     <div class="user-intro center-align">
-        <h4 class="hidden">一个<span id="js-rotating">勤奋, 上进, 苦钻, 求索</span>的码农新手</h4>
+        <h4 class="hidden">一个<span id="js-rotating"> 自强不息 </span>止于至善</h4>
     </div>
     <div class="user-content center-align">
         <p>
-            心中本没有路，用双手敲写自己的明天。
+           死磕 是不管自己怎么样，都要把事儿做好
         </p>
         <p>
-            知之甚少，学之甚多，生命不休，求索不止。
+           自律 是让自己变得更好，事情自然就会好
         </p>
     </div>
-    <div>
-        <span class="my-linkedin">我的领英(LinkedIn)</span>
-        <div class="linkedin-tag center-align">
-            <div class="LI-profile-badge" data-version="v1" data-size="large" data-locale="zh_CN" data-type="horizontal" data-theme="light" data-vanity="琦雲-黄-a4b9b9164"><a class="LI-simple-link" href='https://cn.linkedin.com/in/%E7%90%A6%E9%9B%B2-%E9%BB%84-a4b9b9164?trk=profile-badge'>黄琦雲</a></div>
-        </div>
-    </div>
-</div>
+    
