--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <a href="{{site.github_profile}}" target="_blank"><img class="circle hoverable z-depth-1" src="{{site.baseurl}}/assets/res/user.png"></a>
     </div>
     <div class="user-intro center-align">
-        <h4 class="hidden">一个<span id="js-rotating"> 自强不息 </span>止于至善</h4>
+         <h4 class="hidden"><span id="js-rotating"> 自强不息 </span>止于至善</h4>
     </div>
     <div class="user-content center-align">
         <p>
