--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,7 +59,7 @@
                     </div>
                     -->
                     <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
-                    <p class="head-message">学习&nbsp;&nbsp;总结&nbsp;&nbsp;分享&nbsp;&nbsp;提升</p>
+                    <p class="head-message">生命那么短，世界有时也很乱，不想争吵，不想冷战，不愿和爱的她有一秒的遗憾……</p>
                 </div>
             </div>
             <div class="search">
@@ -84,8 +84,10 @@
                 </div>
             </li>
             <li><a class="waves-effect" href="{{site.baseurl}}/"><i class="material-icons">home</i>Home - 主页</a></li>
+            <!--
             <li><a class="waves-effect" href="{{site.baseurl}}/projects"><i class="material-icons">description</i>Github - 项目</a></li>
-            <li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories - 目录</a></li>
+            -->
+            <li><a class="waves-effect" href="{{site.baseurl}}/categories"><i class="material-icons">sort</i>Categories - 随笔</a></li>
             <li><a class="waves-effect" href="{{site.baseurl}}/tags"><i class="material-icons">label</i>Tags - 标签</a></li>
             <li><a class="waves-effect" href="{{site.baseurl}}/feed.xml" target="_blank"><i class="material-icons">rss_feed</i>RSS - 订阅</a></li>
             <li>
@@ -96,7 +98,7 @@
             <li>
                 <a class="waves-effect" href="javascript:void(0)"><img src="{{site.baseurl}}/assets/res/wechat-slide.png"
                         style="margin:12px 32px 0 0">WeChat - 微信公众号</a>
-                <img src="{{site.baseurl}}/assets/res/knight.png" alt="微信公众号搜索：程序骑士" width="80%" title="微信公众号搜索：程序骑士"
+                <img src="{{site.baseurl}}/assets/res/knight.png" alt="微信公众号" width="80%" title="微信公众号"
                     style="margin-left:10%">
             </li>
         </ul>
