--- a/_includes/header.html
+++ b/_includes/header.html
@@ -59,7 +59,7 @@
                     </div>
                     -->
                     <a class="page-title" href="{{site.baseurl}}/">{{site.title}}</a>
-                    <p class="head-message">生命那么短，世界有时也很乱，不想争吵，不想冷战，不愿和爱的她有一秒的遗憾……</p>
+                    <p class="head-message" style="font-size:20px;">生命那么短，世界有时也很乱，不想争吵，不想冷战，不愿和爱的她有一秒的遗憾……</p>
                 </div>
             </div>
             <!-- 
