--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -55,8 +55,8 @@ js: ["post.js"]
 </div>
 <hr>
 <div class="knight">
-    <p>技术文章推送</p>
-    <p>手机、电脑实用软件分享</p>
+    <p>分享生活</p>
+    <p>用心做事</p>
     <img src="{{site.baseurl}}/assets/res/knight.png" alt="微信公众号" title="微信公众号">
     <div>
         <img src="{{site.baseurl}}/assets/res/wechat.png" alt="wechat">
