--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,8 @@
 <div class="col s12">
-	<p>加我微信：<img src="/assets/res/my-weixin.png" class="my-weixin" /></p>
-	<p>加我QQ：<a href="http://wpa.qq.com/msgrd?v=3&uin=694247696&site=qq&menu=yes">694247696</a></p>
-	<p>给我发邮件：<a href="mailto:694247696@qq.com">694247696@qq.com</a></p>
-	<p>或者：<a href="http://free.3v.do/gbook/index.asp?username=knightyun" target="_blank">给我留言</a></p>
+	<p><img src="/assets/res/my-weixin.png" class="my-weixin" /></p>
+	<!--
+	<p>"☆☆☆"<a href="http://wpa.qq.com/msgrd?v=3&uin="☆"&site=qq&menu=yes">"☆☆☆☆☆☆☆☆"</a></p>
+         -->
+	<p>✉E-mail：<a href="mailto:wangmaming@126.com">wangmaming@126.com</a></p>
+	<p>*❀㉿☬㉿❀*<a href="http://free.3v.do/gbook/index.asp?username=knightyun" target="_blank">留言板</a></p>
 </div>
